--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="hero">
       <div class="info d-flex align-items-center">
-        <div class="container">
-          <div class="row justify-content-center">
+        <div class="container" style="padding-top: 100px">
+          <div class="row justify-content-center" style="height: 100%">
             <div class="col-lg-6 text-center main-heading-div">
               <h2 data-aos="fade-down">Welcome to <span>Al-AFZAH</span></h2>
               <p data-aos="fade-up">
@@ -164,25 +164,25 @@
                 class="btn-get-started"
                 >Get Started</a
               >
-              <ul class="large-gap busisness-domain-ul" style="">
-                <li>
-                  <i class="bi bi-check-circle color-red"></i>
-                  <span>Building Materials Supply</span>
-                </li>
-                <li>
-                  <i class="bi bi-check-circle color-red"></i>
-                  <span>Contracting and Construction </span>
-                </li>
-                <li>
-                  <i class="bi bi-check-circle color-red"></i>
-                  <span>Cleaning And Soft Services</span>
-                </li>
-                <li>
-                  <i class="bi bi-check-circle color-red"></i>
-                  <span>Annual Maintaince COntract</span>
-                </li>
-              </ul>
             </div>
+            <ul class="large-gap busisness-domain-ul">
+              <li  data-aos="fade-up">
+                <i class="bi bi-check-circle color-red"></i>
+                <span>Building Materials Supply</span>
+              </li>
+              <li data-aos="fade-down">
+                <i class="bi bi-check-circle color-red"></i>
+                <span>Contracting and Construction </span>
+              </li>
+              <li data-aos="fade-up">
+                <i class="bi bi-check-circle color-red"></i>
+                <span>Cleaning And Soft Services</span>
+              </li>
+              <li data-aos="fade-down">
+                <i class="bi bi-check-circle color-red"></i>
+                <span>Annual Maintaince Contract</span>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -532,7 +532,13 @@
               >
                 <i class="fa-solid fa-bolt flex-shrink-0"></i>
                 <div>
-                  <h4><a href="service-details.html#electrical-system-details" class="stretched-link">Electrical Work</a></h4>
+                  <h4>
+                    <a
+                      href="service-details.html#electrical-system-details"
+                      class="stretched-link"
+                      >Electrical Work</a
+                    >
+                  </h4>
                   <p>
                     We provide expert electrical work, including installation,
                     maintenance, and repair of wiring, lighting, and power
@@ -550,7 +556,11 @@
                 <i class="fa-solid fa-fire-flame-curved flex-shrink-0"></i>
                 <div>
                   <h4>
-                    <a href="service-details.html#fire-system-details" class="stretched-link">Fire Safety Systems</a>
+                    <a
+                      href="service-details.html#fire-system-details"
+                      class="stretched-link"
+                      >Fire Safety Systems</a
+                    >
                   </h4>
                   <p>
                     We offer comprehensive fire safety systems, including
@@ -568,7 +578,13 @@
               >
                 <i class="fas fa-snowflake flex-shrink-0"></i>
                 <div>
-                  <h4><a href="service-details.html#hvax-system-details" class="stretched-link">HVAC Works</a></h4>
+                  <h4>
+                    <a
+                      href="service-details.html#hvax-system-details"
+                      class="stretched-link"
+                      >HVAC Works</a
+                    >
+                  </h4>
                   <p>
                     We deliver comprehensive HVAC works, focusing on system
                     design, optimization, ductwork, and climate control for
@@ -586,7 +602,9 @@
                 <i class="fa-solid fa-wrench flex-shrink-0"></i>
                 <div>
                   <h4>
-                    <a href="service-details.html#plumbing-drainage-details" class="stretched-link"
+                    <a
+                      href="service-details.html#plumbing-drainage-details"
+                      class="stretched-link"
                       >Plumbing & Drainage Work</a
                     >
                   </h4>
@@ -606,7 +624,9 @@
                 <i class="fa-solid fa-broom flex-shrink-0"></i>
                 <div>
                   <h4>
-                    <a href="service-details.html#cleaning-soft-details" class="stretched-link"
+                    <a
+                      href="service-details.html#cleaning-soft-details"
+                      class="stretched-link"
                       >Cleaning & Soft Service</a
                     >
                   </h4>
@@ -637,7 +657,9 @@
                 <i class="fas fa-cogs flex-shrink-0"></i>
                 <div>
                   <h4>
-                    <a href="service-details.html#communication-safety-details" class="stretched-link"
+                    <a
+                      href="service-details.html#communication-safety-details"
+                      class="stretched-link"
                       >ELV & Control System Work</a
                     >
                   </h4>
@@ -658,7 +680,11 @@
                 <i class="fas fa-drafting-compass flex-shrink-0"></i>
                 <div>
                   <h4>
-                    <a href="service-details.html#deisgn-service-details" class="stretched-link">MED Design & Drafting</a>
+                    <a
+                      href="service-details.html#deisgn-service-details"
+                      class="stretched-link"
+                      >MED Design & Drafting</a
+                    >
                   </h4>
                   <p>
                     We provide MED design and drafting services, including
@@ -697,7 +723,11 @@
                 <i class="fas fa-hard-hat flex-shrink-0"></i>
                 <div>
                   <h4>
-                    <a href="service-details.html#civil-work-details" class="stretched-link">Civil & Fitout Works</a>
+                    <a
+                      href="service-details.html#civil-work-details"
+                      class="stretched-link"
+                      >Civil & Fitout Works</a
+                    >
                   </h4>
                   <p>
                     We manage civil and fitout works, covering structural
@@ -790,158 +820,163 @@
     </main>
     <!-- End #main -->
 
-<!-- ======= Footer ======= -->
-<footer id="footer" class="footer">
-  <div class="footer-content position-relative">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 col-md-6">
-          <div class="footer-info">
-            <div
-              class=""
-              style="
-                display: flex;
-                gap: 1rem;
-                align-items: center;
-                margin-bottom: 1.5rem;
-              "
-            >
-              <img
-                src="./assets/img/logoImage.png"
-                alt=""
-                width="36px"
-                height="40px"
-              />
-              <img
-                src="./assets/img/logoText.png"
-                alt=""
-                width="137px"
-                height="40px"
-              />
+    <!-- ======= Footer ======= -->
+    <footer id="footer" class="footer">
+      <div class="footer-content position-relative">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 col-md-6">
+              <div class="footer-info">
+                <div
+                  class=""
+                  style="
+                    display: flex;
+                    gap: 1rem;
+                    align-items: center;
+                    margin-bottom: 1.5rem;
+                  "
+                >
+                  <img
+                    src="./assets/img/logoImage.png"
+                    alt=""
+                    width="36px"
+                    height="40px"
+                  />
+                  <img
+                    src="./assets/img/logoText.png"
+                    alt=""
+                    width="137px"
+                    height="40px"
+                  />
+                </div>
+                <p>
+                  Building No 94, Othman Bin Affan Street 180, <br />
+                  Doha, Qatar, PO Box No:36258
+                  <br /><br />
+                  <strong>Phone:</strong> +974 66908915<br />
+                  <strong>Phone:</strong> +974 30806490<br />
+                  <strong>Email:</strong> info@al-afzahgroup.com<br />
+                </p>
+                <div class="social-links d-flex mt-3">
+                  <a
+                    href="#"
+                    class="d-flex align-items-center justify-content-center"
+                    ><i class="bi bi-twitter"></i
+                  ></a>
+                  <a
+                    href="#"
+                    class="d-flex align-items-center justify-content-center"
+                    ><i class="bi bi-facebook"></i
+                  ></a>
+                  <a
+                    href="#"
+                    class="d-flex align-items-center justify-content-center"
+                    ><i class="bi bi-instagram"></i
+                  ></a>
+                  <a
+                    href="#"
+                    class="d-flex align-items-center justify-content-center"
+                    ><i class="bi bi-linkedin"></i
+                  ></a>
+                </div>
+              </div>
             </div>
-            <p>
-              Building No 94, Othman Bin Affan Street 180, <br />
-              Doha, Qatar, PO Box No:36258
-              <br /><br />
-              <strong>Phone:</strong> +974 66908915<br />
-              <strong>Phone:</strong> +974 30806490<br />
-              <strong>Email:</strong> info@al-afzahgroup.com<br />
-            </p>
-            <div class="social-links d-flex mt-3">
-              <a
-                href="#"
-                class="d-flex align-items-center justify-content-center"
-                ><i class="bi bi-twitter"></i
-              ></a>
-              <a
-                href="#"
-                class="d-flex align-items-center justify-content-center"
-                ><i class="bi bi-facebook"></i
-              ></a>
-              <a
-                href="#"
-                class="d-flex align-items-center justify-content-center"
-                ><i class="bi bi-instagram"></i
-              ></a>
-              <a
-                href="#"
-                class="d-flex align-items-center justify-content-center"
-                ><i class="bi bi-linkedin"></i
-              ></a>
+            <!-- End footer info column-->
+
+            <div class="col-lg-2 col-md-3 footer-links">
+              <h4>Useful Links</h4>
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="/about.html">About us</a></li>
+                <li><a href="#services">What we offer</a></li>
+                <li><a href="#alt-services">Services</a></li>
+                <li><a href="#projects">Projects</a></li>
+              </ul>
             </div>
+            <!-- End footer links column-->
+
+            <div class="col-lg-2 col-md-3 footer-links">
+              <h4>Our Services</h4>
+              <ul>
+                <li>
+                  <a href="service-details.html#deisgn-service-details"
+                    >Deisgn & Engineering</a
+                  >
+                </li>
+                <li>
+                  <a href="service-details.html#electrical-system-details"
+                    >Electrical System</a
+                  >
+                </li>
+                <li>
+                  <a href="service-details.html#fire-system-details"
+                    >Fire Safety</a
+                  >
+                </li>
+                <li>
+                  <a href="service-details.html#communication-safety-details"
+                    >Communication & Security</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <!-- End footer links column-->
+
+            <div class="col-lg-2 col-md-3 footer-links">
+              <h4>Our Services</h4>
+              <ul>
+                <li>
+                  <a href="service-details.html#hvax-system-details"
+                    >HVAC System</a
+                  >
+                </li>
+                <li>
+                  <a href="service-details.html#plumbing-drainage-details"
+                    >Plumbing & Drainage</a
+                  >
+                </li>
+                <li>
+                  <a href="service-details.html#civil-work-details"
+                    >Civil Works</a
+                  >
+                </li>
+                <li>
+                  <a href="service-details.html#cleaning-soft-details"
+                    >Cleaning & Soft Services</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <!-- End footer links column-->
+            <!-- End footer links column-->
           </div>
         </div>
-        <!-- End footer info column-->
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="/about.html">About us</a></li>
-            <li><a href="#services">What we offer</a></li>
-            <li><a href="#alt-services">Services</a></li>
-            <li><a href="#projects">Projects</a></li>
-          </ul>
-        </div>
-        <!-- End footer links column-->
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
-          <ul>
-            <li>
-              <a href="service-details.html#deisgn-service-details"
-                >Deisgn & Engineering</a
-              >
-            </li>
-            <li>
-              <a href="service-details.html#electrical-system-details"
-                >Electrical System</a
-              >
-            </li>
-            <li>
-              <a href="service-details.html#fire-system-details"
-                >Fire Safety</a
-              >
-            </li>
-            <li>
-              <a href="service-details.html#communication-safety-details"
-                >Communication & Security</a
-              >
-            </li>
-          </ul>
-        </div>
-        <!-- End footer links column-->
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
-          <ul>
-            <li>
-              <a href="service-details.html#hvax-system-details"
-                >HVAC System</a
-              >
-            </li>
-            <li>
-              <a href="service-details.html#plumbing-drainage-details"
-                >Plumbing & Drainage</a
-              >
-            </li>
-            <li>
-              <a href="service-details.html#civil-work-details"
-                >Civil Works</a
-              >
-            </li>
-            <li>
-              <a href="service-details.html#cleaning-soft-details"
-                >Cleaning & Soft Services</a
-              >
-            </li>
-          </ul>
-        </div>
-        <!-- End footer links column-->
-        <!-- End footer links column-->
       </div>
-    </div>
-  </div>
 
-  <div class="footer-legal text-center position-relative">
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>AL AFZAH GROUP </span></strong>. All
-        Rights Reserved
+      <div class="footer-legal text-center position-relative">
+        <div class="container">
+          <div class="copyright">
+            &copy; Copyright <strong><span>AL AFZAH GROUP </span></strong>. All
+            Rights Reserved
+          </div>
+          <div class="credits">
+            <!-- All the links in the footer should remain intact. -->
+            <!-- You can delete the links only if you purchased the pro version. -->
+            <!-- Licensing information: https://bootstrapmade.com/license/ -->
+            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/ -->
+            Designed by
+            <a href="https://www.instagram.com/codecave.media.in/"
+              >CODE CAVE MEDIA</a
+            >
+            Developed by
+            <a href="https://www.linkedin.com/in/muhammed-irshad-81985b287/"
+              >Muhammed Irshad</a
+            >
+          </div>
+        </div>
       </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/ -->
-        Designed by
-        <a href="https://www.instagram.com/codecave.media.in/">CODE CAVE MEDIA</a> Developed
-        by <a href="https://www.linkedin.com/in/muhammed-irshad-81985b287/">Muhammed Irshad</a>
-      </div>
-    </div>
-  </div>
-</footer>
-<!-- End Footer -->
+    </footer>
+    <!-- End Footer -->
 
     <a
       href="#"
@@ -984,7 +1019,7 @@
 
           try {
             const response = await fetch(
-              "https://portfolio-5q0o.onrender.com/api/quotation/",
+              "https://irshad0722.pythonanywhere.com/api/quotation/",
               {
                 method: "POST",
                 headers: {
